--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -6,10 +6,18 @@
   justify-content: center;
   align-items: center;
 }
-
+.title {
+  font-family: "Teko", sans-serif;
+  position: absolute;
+  top: 5vh;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 5vw;
+  color: #828282;
+}
 .log-input {
   display: block;
-  color: #616161;
+  color: #828282;
   width: 100%;
   border: none;
   border-radius: 0;
@@ -21,10 +29,18 @@
 }
 
 .login-form {
-  background-color: #f4feff81;
-  width: 500px;
+  background-image: radial-gradient(
+      closest-side at 60% 55%,
+      #e3fdff 20%,
+      transparent 100%
+    ),
+    linear-gradient(transparent, #f4feffb2 20%, #f4feff 40%),
+    url("../media/images/pexels-valeria-boltneva-1833349.jpg"); /* W3C */
+  background-position: 50% 30%;
+  background-size: cover;
+  width: 30vw;
   margin: 4em auto;
-  padding: 5rem 5rem 5rem 5rem;
+  padding: 10rem 5rem 5rem 5rem;
   border: 1px solid #ebebeb;
   box-shadow: #d3d3d333 0 0 1rem 0, #d3d3d333 0 0 1rem 0;
 }
@@ -61,4 +77,19 @@
   border: #d1d1d1 0.2rem solid;
   background-color: transparent;
   color: black;
+}
+
+/* Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+  .title {
+    top: 8vh;
+    font-size: 14vw;
+  }
+  .login-form {
+    width: 60vw;
+  }
+}
+
+/* Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
 }
