--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -5,11 +5,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .title {
   font-family: "Teko", sans-serif;
-  position: absolute;
-  top: 5vh;
+  display: block;
+  margin: 0;
   text-transform: uppercase;
   font-weight: 400;
   font-size: 5vw;
@@ -35,14 +36,15 @@
       transparent 100%
     ),
     linear-gradient(transparent, #f4feffb2 20%, #f4feff 40%),
-    url("../media/images/pexels-valeria-boltneva-1833349.jpg"); /* W3C */
-  background-position: 50% 30%;
+    url("../media/images/0.jpg"); /* W3C */
+  background-position: 50% 60%;
   background-size: cover;
   width: 30vw;
-  margin: 4em auto;
-  padding: 10rem 5rem 5rem 5rem;
+  margin: 0 auto 10rem auto;
+  padding: 15rem 5rem 5rem 5rem;
   border: 1px solid #ebebeb;
   box-shadow: #d3d3d333 0 0 1rem 0, #d3d3d333 0 0 1rem 0;
+  border-radius: 2rem;
 }
 
 .buttons-wrap {
@@ -66,7 +68,6 @@
   cursor: pointer;
   border: none;
   background-color: rgb(74, 126, 146);
-  font-size: 16px;
   color: #fff;
   text-transform: uppercase;
   position: relative;
@@ -82,8 +83,7 @@
 /* Portrait */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .title {
-    top: 8vh;
-    font-size: 14vw;
+    font-size: 10vw;
   }
   .login-form {
     width: 60vw;
