--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -29,7 +29,7 @@
   stroke-miterlimit: 10;
 }
 .initial-menu {
-  background-color: rgba(163, 65, 255, 0.322);
+  background-color: #f4feff;
   width: 75vh;
   height: 40vh;
   margin: 0 auto;
