--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -43,3 +43,7 @@ select {
 
 @import "./initial";
 @import "./login";
+@import "./MyKitchen.scss";
+@import "./Schedule.scss";
+@import "./Search.scss";
+@import "./Statistics.scss";
