--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -6,21 +6,7 @@ nav {
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  input {
-    height: 50%;
-    border-radius: 4pt;
-    width: 50%;
-    padding: 0.3rem;
-    margin: 0.5rem;
-    background-color: transparent;
-    cursor: text;
-    font-family: "Teko", sans-serif;
-    color: #828282;
-    font-size: 2rem;
-    transition: all 0.3s ease;
-    box-shadow: 2px 2px 8px steelblue;
-  }
-  button {
+  a {
     height: 50%;
     border-radius: 4pt;
     width: 50%;
@@ -33,8 +19,8 @@ nav {
     font-size: 2rem;
     transition: all 0.3s ease;
     box-shadow: 2px 2px 8px steelblue;
-    &:active {
-      background-color: rgba(59, 190, 207, 0.747);
+    &:visited {
+      background-color: rgb(21, 219, 245);
       color: whitesmoke;
     }
   }
