--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -1,6 +1,3 @@
-.fixed-menu {
-}
-
 .float-menu-container {
   display: flex;
   justify-content: center;
@@ -12,11 +9,11 @@
   width: 100vw;
   height: 100vh;
 }
-
+.logo-container {
+  position: relative;
+}
 .svg-logo {
-  width: 200vw;
-  margin-left: 6vw;
-  top: -15vw;
+  top: -40vh;
   overflow: hidden;
   stroke-linejoin: round;
   stroke-linecap: round;
@@ -28,7 +25,6 @@
   stroke: #828282;
   stroke-width: 2;
   stroke-miterlimit: 3;
-
   background-color: blue;
 }
 .svg-test-style2 {
@@ -43,21 +39,15 @@
   flex-direction: column;
   justify-content: center;
   background-color: #f4feff;
-  width: 30vw;
+  width: 35vw;
   height: 40vh;
   margin: 0 auto;
   position: fixed;
   top: 45vh;
-}
-.menu-elem-intro {
-  width: 50%;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  align-self: center;
-  font-family: "Teko", sans-serif;
-  color: #828282;
-  font-size: 2rem;
+  // menuanimation
+  // top: 2vh;
+  // left: 2vw;
+  // width: 20vw;
 }
 
 .menu-elem {
@@ -68,10 +58,24 @@
   text-align: center;
   flex-direction: column;
   align-self: center;
+  align-content: center;
   font-family: "Teko", sans-serif;
   color: #828282;
   font-size: 2rem;
   transition: 1s;
+  // menuanimation
+  // text-align: start;
+  // height: 13%;
+  // width: 80%;
+}
+.links-container {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+}
+.align-left {
+  justify-content: start;
+  text-align: start;
 }
 .nonsvg-h-line {
   position: absolute;
@@ -94,14 +98,22 @@
   transition: 1s;
 }
 
+.svg-hamburguer {
+  width: 15vw;
+  overflow: hidden;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  position: absolute;
+  width: 3vw;
+  margin: 1rem;
+  top: 0;
+  // menuanimation
+}
+
 /* Portrait */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 75vw;
-  }
-  .svg-logo {
-    width: 300vw;
-    margin-left: -15vw;
   }
 }
 
@@ -109,5 +121,8 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 50vw;
+  }
+  .svg-logo {
+    top: -5rem;
   }
 }
