--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -1,6 +1,3 @@
-.fixed-menu {
-}
-
 .float-menu-container {
   display: flex;
   justify-content: center;
@@ -14,9 +11,7 @@
 }
 
 .svg-logo {
-  width: 200vw;
-  margin-left: 6vw;
-  top: -15vw;
+  top: -40vh;
   overflow: hidden;
   stroke-linejoin: round;
   stroke-linecap: round;
@@ -28,7 +23,6 @@
   stroke: #828282;
   stroke-width: 2;
   stroke-miterlimit: 3;
-
   background-color: blue;
 }
 .svg-test-style2 {
@@ -43,21 +37,11 @@
   flex-direction: column;
   justify-content: center;
   background-color: #f4feff;
-  width: 30vw;
+  width: 35vw;
   height: 40vh;
   margin: 0 auto;
   position: fixed;
   top: 45vh;
-}
-.menu-elem-intro {
-  width: 50%;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  align-self: center;
-  font-family: "Teko", sans-serif;
-  color: #828282;
-  font-size: 2rem;
 }
 
 .menu-elem {
@@ -68,6 +52,7 @@
   text-align: center;
   flex-direction: column;
   align-self: center;
+  align-content: center;
   font-family: "Teko", sans-serif;
   color: #828282;
   font-size: 2rem;
@@ -99,15 +84,14 @@
   .initial-menu {
     width: 75vw;
   }
-  .svg-logo {
-    width: 300vw;
-    margin-left: -15vw;
-  }
 }
 
 /* Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 50vw;
+  }
+  .svg-logo {
+    top: -5rem;
   }
 }
