opacity transition and styles corrections

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -67,7 +67,7 @@
   outline: none;
 }
 .register {
-  border: #d1d1d1 0.2rem solid;
+  border: #4a7e92 0.2rem solid;
   background-color: transparent;
   color: black;
 }
