added media, created new sub-components, corrected styles & added test content

--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -1,4 +1,4 @@
-nav {
+.my-kitchen-nav {
   overflow: hidden;
   position: fixed;
   bottom: 0;
@@ -6,7 +6,7 @@ nav {
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  a {
+  .nav-item {
     height: 50%;
     border-radius: 4pt;
     width: 50%;
@@ -20,8 +20,8 @@ nav {
     transition: all 0.3s ease;
     box-shadow: 2px 2px 8px steelblue;
     &:visited {
-      background-color: rgb(21, 219, 245);
-      color: whitesmoke;
+      background-color: rgb(24, 30, 31);
+      color: rgb(8, 44, 247);
     }
   }
 }
