fixed errors & renamed files

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -47,3 +47,5 @@ select {
 @import "./Schedule.scss";
 @import "./Search.scss";
 @import "./Statistics.scss";
+@import "./Inventário.scss";
+@import "./Item.module.css";
