--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -11,8 +11,9 @@ body {
 }
 
 .initial-background {
+  top: 0;
   position: absolute;
-  z-index: -10;
+  z-index: -100;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
