--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -1,7 +1,6 @@
-
 .my-kitchen-nav {
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   justify-content: center;
   display: flex;
