--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -11,9 +11,6 @@ body {
   max-width: 20px;
   margin-top: 10px;
 }
-.nav-link.active {
-  background-color: lightgrey !important;
-}
 
 .reserve-container {
   position: relative;
@@ -25,6 +22,7 @@ body {
   -ms-transition: all 1s ease; /* Opera */
   transition: all 1s ease;
 }
+//remover - tablet app não faz sentido ter hover
 .card-body:hover {
   -webkit-transform: scale(1.05);
   -moz-transform: scale(1.05);
