--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -25,8 +25,10 @@
   overflow: hidden;
   position: absolute;
   bottom: 0;
+  height: 12.5vh;
   justify-content: center;
   display: flex;
+  align-items: center;
   box-sizing: border-box;
   width: 100%;
   a {
@@ -40,6 +42,16 @@
     color: #828282;
     font-size: 2rem;
     transition: all 0.3s ease;
-    border: 2px solid blue;
+    text-decoration: none;
+    text-align: center;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover{
+      background-color: #4a7e92;
+      color:white;
+    }
   }
+  
 }
