--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -37,11 +37,15 @@
   flex-direction: column;
   justify-content: center;
   background-color: #f4feff;
+  overflow: hidden;
   width: 35vw;
   height: 40vh;
   margin: 0 auto;
   position: fixed;
   top: 45vh;
+  a{
+    text-decoration: none;
+  }
 }
 
 .menu-elem {
@@ -57,6 +61,12 @@
   color: #828282;
   font-size: 2rem;
   transition: 1s;
+  text-decoration: none;
+  &:hover{
+    background-color: #4a7e92;
+    color:white;
+  }
+  
 }
 .nonsvg-h-line {
   position: absolute;
@@ -83,6 +93,9 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 75vw;
+  }
+  .svg-logo {
+    top: -5rem;
   }
 }
 
