--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -33,7 +33,7 @@
   width: 100%;
   a {
     height: 50%;
-    border-radius: 4pt;
+    border-right: 1px solid gray;
     width: 50%;
     padding: 0.3rem;
     background-color: transparent;
@@ -51,6 +51,9 @@
     &:hover{
       background-color: #4a7e92;
       color:white;
+    }
+    &:last-child{
+      border-right: none;
     }
   }
   
