--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -105,6 +105,15 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  padding: 2rem 2rem;
+}
+
+.home-link{
+  width: 5vh;
+  left: 3vw;
+  position: absolute;
+  img{width: 100%;}
 }
 
 /* Portrait */
