--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -31,6 +31,7 @@
   align-items: center;
   box-sizing: border-box;
   width: 100%;
+  z-index: 1000;
   a {
     height: 50%;
     border-right: 1px solid gray;
@@ -57,4 +58,68 @@
     }
   }
   
+}
+.list-results{
+  width: 80%;
+  max-height: 63vh;
+  overflow-y: scroll;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;    
+}
+.item-result{
+  width: 24.25%;
+  height: 20vh;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-right: 1%;
+  margin-bottom: 1%;
+  cursor: pointer;
+}
+.no-margin-right{
+  margin-right: 0;
+}
+.item-img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 50%;
+  background-color: #ffffff;
+  img {
+    width: 100%;
+    top: -50%;
+    position: absolute;
+  }
+}
+.item-img-detail{
+  position: relative;
+  border-radius: 50%;
+  width: 20vw;
+  height: 20vw;
+  top:-50%;
+  overflow: hidden;
+  
+  top: 0;
+  opacity: 50%;
+  background-color: #ffffff;
+  img {
+    width: 100%;
+    top: -50%;
+    position: absolute;
+  }
+}
+.item-detail-hidden{
+  display: none;
+}
+.item-detail{
+  display: block;
+  position: absolute;
+  width: inherit;
+  height: 63vh;
+  z-index: 500;
+  background-color: #EEEEEE;
 }
