--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -123,3 +123,11 @@
   z-index: 500;
   background-color: #EEEEEE;
 }
+
+/* Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+  .item-result {
+    width: 32.33%;
+    height: 15vh;
+  }
+}
