--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -30,8 +30,11 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  width: 100%;
+  width: 40%;
   z-index: 1000;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
   a {
     height: 50%;
     border-right: 1px solid gray;
