--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -16,6 +16,7 @@
   stroke-linejoin: round;
   stroke-linecap: round;
   position: absolute;
+  transform: scale(1);
 }
 
 .svg-test-style {
@@ -34,12 +35,12 @@
 .initial-menu {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   background-color: #f4feff;
   overflow: hidden;
   width: 35vw;
-  height: 40vh;
+  height: 20vh;
   margin: 0 auto;
   position: fixed;
   top: 45vh;
@@ -49,7 +50,7 @@
 }
 
 .menu-elem {
-  height: 50%;
+  height: 100%;
   width: 50%;
   display: flex;
   justify-content: center;
@@ -96,6 +97,7 @@
   }
   .svg-logo {
     top: -5rem;
+    transform: scale(2.2);
   }
 }
 
@@ -105,6 +107,7 @@
     width: 50vw;
   }
   .svg-logo {
-    top: -5rem;
+    top: -10rem;
+    transform: scale(1.3) !important;
   }
 }
