Corrected json, removed components & added styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -148,11 +148,7 @@ select {
 
 @import "./initial";
 @import "./login";
-@import "./Inventário.scss";
+@import "./Inventario.scss";
 @import "./Item.module.css";
-// @import "./Menu.scss";
 @import "./MyKitchen.scss";
-@import "./Schedule.scss";
-@import "./Search.scss";
-@import "./Statistics.scss";
 @import "./SearchContainer"
