--- a/src/styles/_searchContainer.scss
+++ b/src/styles/_searchContainer.scss
@@ -1,11 +1,12 @@
-.search-container{
-    width: 50vw;
-    height: 6.25vh;
-    background-color: white;
-    display: flex;
-    box-shadow: none;
-    border: 0.2rem solid #d3d3d3;
-    input{
-        padding: 0 2vw;
-    }
+.search-container {
+  width: 50vw;
+  height: 6.25vh;
+  background-color: white;
+  display: flex;
+  box-shadow: none;
+  border: 0.2rem solid #d3d3d3;
+  font-size: 1.5vw;
+  input {
+    padding: 0 2vw;
+  }
 }
