--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -30,6 +30,8 @@
   display: flex;
   align-items: center;
   box-sizing: border-box;
+  border-radius: 2vw;
+  font-size: 3vw;
   width: 40%;
   z-index: 1000;
   right: 0;
@@ -44,7 +46,6 @@
     cursor: pointer;
     font-family: "Teko", sans-serif;
     color: #828282;
-    font-size: 2rem;
     transition: all 0.3s ease;
     text-decoration: none;
     text-align: center;
@@ -52,26 +53,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    &:hover{
+    &:hover {
       background-color: #4a7e92;
-      color:white;
+      color: white;
     }
-    &:last-child{
+    &:last-child {
       border-right: none;
     }
   }
-  
 }
-.list-results{
+.cover-scroll {
+  width: 100%;
+  position: absolute;
+  height: 6.25vh;
+  bottom: 6.25vh;
+  background: linear-gradient(#ffffff00, #eeeeee);
+}
+.list-results {
   width: 80%;
-  max-height: 63vh;
+  max-height: 75vh;
   overflow-y: scroll;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;    
+  justify-content: flex-start;
 }
-.item-result{
+.item-result {
   width: 24.25%;
   height: 20vh;
   overflow: hidden;
@@ -83,10 +90,10 @@
   cursor: pointer;
   border-radius: 0.2rem;
 }
-.no-margin-right{
+.no-margin-right {
   margin-right: 0;
 }
-.item-img{
+.item-img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -99,14 +106,14 @@
     position: absolute;
   }
 }
-.item-img-detail{
+.item-img-detail {
   position: relative;
   border-radius: 50%;
   width: 20vw;
   height: 20vw;
-  top:-50%;
+  top: -50%;
   overflow: hidden;
-  
+
   top: 0;
   opacity: 50%;
   background-color: #ffffff;
@@ -116,16 +123,44 @@
     position: absolute;
   }
 }
-.item-detail-hidden{
+.item-detail-hidden {
   display: none;
 }
-.item-detail{
+.item-detail {
   display: block;
   position: absolute;
   width: inherit;
-  height: 63vh;
+  height: 75vh;
   z-index: 500;
-  background-color: #EEEEEE;
+  background-color: #eeeeee;
+  svg {
+    width: 10%;
+    right: 0;
+    position: absolute;
+  }
+}
+.results-name {
+  margin-top: 2vh;
+  display: block;
+  width: 100%;
+  color: #828282;
+  font-size: 2vw;
+  border-bottom: 0.2vh solid #d3d3d38a;
+}
+
+.main-filters {
+  display: block;
+  color: #828282;
+  font-size: 1vw;
+  width: 100%;
+  margin-bottom: 1vh;
+}
+
+.filter-button {
+  margin-left: 0.5vw;
+  padding: 0 0.3vw;
+  border-radius: 0.3rem;
+  border: 1px solid #828282;
 }
 
 /* Portrait */
@@ -133,5 +168,10 @@
   .item-result {
     width: 32.33%;
     height: 15vh;
+  }
+  .item-detail {
+    svg {
+      width: 15%;
+    }
   }
 }
