--- a/src/styles/_initial.scss
+++ b/src/styles/_initial.scss
@@ -1,22 +1,39 @@
-.float-menu-container {
+.menu-container {
   display: flex;
   justify-content: center;
-  position: fixed;
+  position: relative;
   width: 100vw;
 }
 .initial {
   position: relative;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.initial-wrapper {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  position: relative;
+  position: relative;
+  bottom: 0;
 }
 
 .svg-logo {
-  top: -40vh;
+  // top: -40vh;
+  width: 100%;
+  height: 50vw;
   overflow: hidden;
   stroke-linejoin: round;
   stroke-linecap: round;
-  position: absolute;
-  transform: scale(1);
+  transform-origin: bottom;
+  transform: scale(3);
 }
 
 .svg-test-style {
@@ -40,11 +57,10 @@
   background-color: #f4feff;
   overflow: hidden;
   width: 35vw;
-  height: 20vh;
-  margin: 0 auto;
-  position: fixed;
-  top: 45vh;
-  a{
+  height: 100%;
+  margin: 5vh auto;
+  position: relative;
+  a {
     text-decoration: none;
   }
 }
@@ -60,14 +76,13 @@
   align-content: center;
   font-family: "Teko", sans-serif;
   color: #828282;
-  font-size: 2rem;
+  font-size: 3vw;
   transition: 1s;
   text-decoration: none;
-  &:hover{
+  &:hover {
     background-color: #4a7e92;
-    color:white;
+    color: white;
   }
-  
 }
 .nonsvg-h-line {
   position: absolute;
@@ -94,10 +109,11 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 75vw;
+    height: 50%;
+    border-radius: 4rem;
   }
   .svg-logo {
     top: -5rem;
-    transform: scale(2.2);
   }
 }
 
@@ -105,9 +121,9 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .initial-menu {
     width: 50vw;
+    border-radius: 4rem;
   }
   .svg-logo {
     top: -10rem;
-    transform: scale(1.3) !important;
   }
 }
