--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -52,12 +52,13 @@ select {
 
 // scrollbar
 ::-webkit-scrollbar {
+  position: absolute;
   width: 0.5vw;
 }
 
 ::-webkit-scrollbar-track {
   border-radius: 0.5rem;
-  background-color: #dddddd;
+  background-color: #dddddd77;
 }
 
 ::-webkit-scrollbar-thumb {
