--- a/src/styles/MyKitchen.scss
+++ b/src/styles/MyKitchen.scss
@@ -73,6 +73,7 @@
   width: 80%;
   max-height: 75vh;
   overflow-y: overlay;
+  overflow-x: hidden;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -161,6 +162,7 @@
   padding: 0 0.3vw;
   border-radius: 0.3rem;
   border: 1px solid #828282;
+  display: inline;
 }
 
 /* Portrait */
