--- a/src/styles/_items.scss
+++ b/src/styles/_items.scss
@@ -16,6 +16,23 @@
     margin-top: 2%;
   }
 }
+.item-result {
+  width: 24.25%;
+  height: 20vh;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-right: 1%;
+  margin-bottom: 1%;
+  cursor: pointer;
+  border-radius: 0.2rem;
+}
+
+.no-margin-right {
+  margin-right: 0;
+}
+
 .item-category {
   top: 5%;
   padding: 0 5%;
@@ -32,7 +49,20 @@
 }
 .recipe-description {
 }
-
+.item-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  opacity: 70%;
+  background-color: #ffffff;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+  }
+}
 /* Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .item-title {
