--- a/src/styles/_itemDetail.scss
+++ b/src/styles/_itemDetail.scss
@@ -24,6 +24,7 @@
   display: block;
   position: absolute;
   width: inherit;
+  margin-top: -7.5rem;
   height: 75vh;
   z-index: 500;
   overflow-y: overlay;
